--- a/index.html
+++ b/index.html
@@ -17,124 +17,136 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <ul class="index-nav list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="address list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container cont-header">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>Studio</a
+          >
+          <ul class="index-nav list">
+            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="address list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="hero">
-        <!-- HERO -->
+      <!-- HERO -->
+      <section class="hero container">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
       <section class="section advantages">
         <!-- Заголовок надо будет скрыть -->
-        <h2>Our advantages</h2>
-        <ul class="list">
-          <li>
-            <h3 class="title-second">Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-second">Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-second">Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-second">Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Our advantages</h2>
+          <ul class="list">
+            <li>
+              <h3 class="title-second">Strategy</h3>
+              <p>
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-second">Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-second">Diligence</h3>
+              <p>
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="title-second">Technologies</h3>
+              <p>
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section works">
-        <h2 class="title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="site design on the monitor"
-              width="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="
-mobile application design"
-              width="360"
-            />
-          </li>
-          <li>
-            <img src="./images/img3.jpg" alt="cross-platform" width="360" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">What are we doing</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="site design on the monitor"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="
+  mobile application design"
+                width="360"
+              />
+            </li>
+            <li>
+              <img src="./images/img3.jpg" alt="cross-platform" width="360" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section team">
-        <h2 class="title">Our Team</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="title-second">Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" />
-            <h3 class="title-second">Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/camila.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="title-second">Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/daniel.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="title-second">Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team">
+          <h2 class="title">Our Team</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/team/mark.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="title-second">Mark Guerrero</h3>
+              <p>Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" />
+              <h3 class="title-second">Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/team/camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="title-second">Camila Garcia</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/team/daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="title-second">Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
