--- a/index.html
+++ b/index.html
@@ -150,14 +150,16 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        ><span class="logo-web">Web</span
-        ><span class="logo-footer">Studio</span></a
-      >
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><span class="logo-web">Web</span
+          ><span class="logo-footer">Studio</span></a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
