--- a/portfolio.html
+++ b/portfolio.html
@@ -17,31 +17,35 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <div class="container cont-header">
-        <nav>
-          <a href="./index.html" class="logo"
+    <header class="header">
+      <div class="container cont-header header-flex">
+        <nav class="nav-flex">
+          <a href="./index.html" class="logo nav-item"
             ><span class="logo-web">Web</span>Studio</a
           >
-          <ul class="index-nav list">
-            <li><a href="./index.html" class="link">Studio</a></li>
-            <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-            <li><a href="" class="link">Contacts</a></li>
+          <ul class="index-nav list menu-flex nav-item">
+            <li class="menu-item">
+              <a href="./index.html" class="link">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="link">Portfolio</a>
+            </li>
+            <li class="menu-item"><a href="" class="link">Contacts</a></li>
           </ul>
         </nav>
-        <address>
-          <ul class="address list">
-            <li>
+        <address class="address">
+          <ul class="address-list list address-flex">
+            <li class="address-item">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
-        </address>
       </div>
+      </address>
     </header>
     <main>
       <section class="section projects">
@@ -61,10 +65,10 @@
             />
             <h2 class="title-second">Banking App Interface Concept</h2>
             <p>App</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
               eligendi!
-            </p>
+            </p> -->
           </li>
           <li>
             <img
@@ -73,28 +77,28 @@
             />
             <h2 class="title-second">Cashless Payment</h2>
             <p>Marketing</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
               similique.
-            </p>
+            </p> -->
           </li>
           <li>
             <img src="./images/portf-project/app-3.jpg" alt="Meditaion App" />
             <h2 class="title-second">Meditaion App</h2>
             <p>App</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
               similique.
-            </p>
+            </p> -->
           </li>
           <li>
             <img src="./images/portf-project/mark-4.jpg" alt="Taxi Service" />
             <h2 class="title-second">Taxi Service</h2>
             <p>Marketing</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
               similique.
-            </p>
+            </p> -->
           </li>
           <li>
             <img
@@ -103,19 +107,19 @@
             />
             <h2 class="title-second">Screen Illustrations</h2>
             <p>Design</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
               molestias.
-            </p>
+            </p> -->
           </li>
           <li>
             <img src="./images/portf-project/mark-6.jpg" alt="Online Courses" />
             <h2 class="title-second">Online Courses</h2>
             <p>Marketing</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
               molestias.
-            </p>
+            </p> -->
           </li>
           <li>
             <img
@@ -124,28 +128,28 @@
             />
             <h2 class="title-second">Instagram Stories Concept</h2>
             <p>Design</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
               molestias.
-            </p>
+            </p> -->
           </li>
           <li>
             <img src="./images/portf-project/web-8.jpg" alt="Organic Food" />
             <h2 class="title-second">Organic Food</h2>
             <p>Web Site</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
               totam.
-            </p>
+            </p> -->
           </li>
           <li>
             <img src="./images/portf-project/web-9.jpg" alt="Fresh Coffee" />
             <h2 class="title-second">Fresh Coffee</h2>
             <p>Web Site</p>
-            <p class="text-card">
+            <!-- <p class="text-card">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
               totam.
-            </p>
+            </p> -->
           </li>
         </ul>
       </section>
@@ -164,3 +168,5 @@
     </footer>
   </body>
 </html>
+
+
