--- a/index.html
+++ b/index.html
@@ -17,31 +17,35 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <div class="container cont-header">
-        <nav>
-          <a href="./index.html" class="logo"
+    <header class="header">
+      <div class="container cont-header header-flex">
+        <nav class="nav-flex">
+          <a href="./index.html" class="logo nav-item"
             ><span class="logo-web">Web</span>Studio</a
           >
-          <ul class="index-nav list">
-            <li><a href="./index.html" class="link">Studio</a></li>
-            <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-            <li><a href="" class="link">Contacts</a></li>
+          <ul class="index-nav list menu-flex nav-item">
+            <li class="menu-item">
+              <a href="./index.html" class="link">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="link">Portfolio</a>
+            </li>
+            <li class="menu-item"><a href="" class="link">Contacts</a></li>
           </ul>
         </nav>
-        <address>
-          <ul class="address list">
-            <li>
+        <address class="address">
+          <ul class="address-list list address-flex">
+            <li class="address-item">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
-        </address>
       </div>
+      </address>
     </header>
     <main>
       <!-- HERO -->
