--- a/index.html
+++ b/index.html
@@ -56,30 +56,30 @@
       <section class="section advantages">
         <!-- Заголовок надо будет скрыть -->
         <div class="container">
-          <h2>Our advantages</h2>
-          <ul class="list">
-            <li>
+          <h2 class="title-invis">Our advantages</h2>
+          <ul class="list advant-flex">
+            <li class="advant-item">
               <h3 class="title-second">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advant-item">
               <h3 class="title-second">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advant-item">
               <h3 class="title-second">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advant-item">
               <h3 class="title-second">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -92,15 +92,15 @@
       <section class="section works">
         <div class="container">
           <h2 class="title">What are we doing</h2>
-          <ul class="list">
-            <li>
+          <ul class="list works-flex">
+            <li class="works-item">
               <img
                 src="./images/img1.jpg"
                 alt="site design on the monitor"
                 width="360"
               />
             </li>
-            <li>
+            <li class="works-item">
               <img
                 src="./images/img2.jpg"
                 alt="
@@ -108,7 +108,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="works-item">
               <img src="./images/img3.jpg" alt="cross-platform" width="360" />
             </li>
           </ul>
@@ -117,8 +117,8 @@
       <section class="section team">
         <div class="container team">
           <h2 class="title">Our Team</h2>
-          <ul class="list">
-            <li>
+          <ul class="list team-flex">
+            <li class="team-item">
               <img
                 src="./images/team/mark.jpg"
                 alt="Mark Guerrero"
@@ -127,12 +127,12 @@
               <h3 class="title-second">Mark Guerrero</h3>
               <p>Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" />
               <h3 class="title-second">Tom Ford</h3>
               <p>Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/team/camila.jpg"
                 alt="Camila Garcia"
@@ -141,7 +141,7 @@
               <h3 class="title-second">Camila Garcia</h3>
               <p>Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/team/daniel.jpg"
                 alt="Daniel Wilson"
