--- a/portfolio.html
+++ b/portfolio.html
@@ -48,104 +48,104 @@
       </address>
     </header>
     <main>
-      <section class="section projects">
-        <h1>Our projects</h1>
-        <ul class="list">
-          <li><button type="button" class="button">All</button></li>
-          <li><button type="button" class="button">Web Site</button></li>
-          <li><button type="button" class="button">App</button></li>
-          <li><button type="button" class="button">Design</button></li>
-          <li><button type="button" class="button">Marketing</button></li>
+      <section class="section projects container">
+        <h1 class="title-invis">Our projects</h1>
+        <ul class="list buttons-flex">
+          <li class="button-item"><button type="button" class="button">All</button></li>
+          <li class="button-item"><button type="button" class="button">Web Site</button></li>
+          <li class="button-item"><button type="button" class="button">App</button></li>
+          <li class="button-item"><button type="button" class="button">Design</button></li>
+          <li class="button-item"><button type="button" class="button">Marketing</button></li>
         </ul>
-        <ul class="list">
-          <li>
+        <ul class="list projects-flex">
+          <li class="projects-item">
             <img
               src="./images/portf-project/app-1.jpg"
-              alt="Banking App Interface Concept"
+              alt="Banking App Interface Concept" width="360"
             />
             <h2 class="title-second">Banking App Interface Concept</h2>
-            <p>App</p>
+            <p class="projects-text">App</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
               eligendi!
             </p> -->
           </li>
-          <li>
+          <li class="projects-item">
             <img
               src="./images/portf-project/mark-2.jpg"
-              alt="Cashless Payment"
+              alt="Cashless Payment" width="360"
             />
             <h2 class="title-second">Cashless Payment</h2>
-            <p>Marketing</p>
+            <p class="projects-text">Marketing</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
               similique.
             </p> -->
           </li>
-          <li>
-            <img src="./images/portf-project/app-3.jpg" alt="Meditaion App" />
+          <li class="projects-item">
+            <img src="./images/portf-project/app-3.jpg" alt="Meditaion App" width="360" />
             <h2 class="title-second">Meditaion App</h2>
-            <p>App</p>
+            <p class="projects-text">App</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
               similique.
             </p> -->
           </li>
-          <li>
-            <img src="./images/portf-project/mark-4.jpg" alt="Taxi Service" />
+          <li class="projects-item">
+            <img src="./images/portf-project/mark-4.jpg" alt="Taxi Service" width="360" />
             <h2 class="title-second">Taxi Service</h2>
-            <p>Marketing</p>
+            <p class="projects-text">Marketing</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
               similique.
             </p> -->
           </li>
-          <li>
+          <li class="projects-item">
             <img
               src="./images/portf-project/des-5.jpg"
-              alt="Screen Illustrations"
+              alt="Screen Illustrations" width="360"
             />
             <h2 class="title-second">Screen Illustrations</h2>
-            <p>Design</p>
+            <p class="projects-text">Design</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
               molestias.
             </p> -->
           </li>
-          <li>
-            <img src="./images/portf-project/mark-6.jpg" alt="Online Courses" />
+          <li class="projects-item">
+            <img src="./images/portf-project/mark-6.jpg" alt="Online Courses" width="360" />
             <h2 class="title-second">Online Courses</h2>
-            <p>Marketing</p>
+            <p class="projects-text">Marketing</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
               molestias.
             </p> -->
           </li>
-          <li>
+          <li class="projects-item">
             <img
               src="./images/portf-project/des-7.jpg"
-              alt="Instagram Stories Concept"
+              alt="Instagram Stories Concept" width="360"
             />
             <h2 class="title-second">Instagram Stories Concept</h2>
-            <p>Design</p>
+            <p class="projects-text">Design</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
               molestias.
             </p> -->
           </li>
-          <li>
-            <img src="./images/portf-project/web-8.jpg" alt="Organic Food" />
+          <li class="projects-item">
+            <img src="./images/portf-project/web-8.jpg" alt="Organic Food" width="360" />
             <h2 class="title-second">Organic Food</h2>
-            <p>Web Site</p>
+            <p class="projects-text">Web Site</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
               totam.
             </p> -->
           </li>
-          <li>
-            <img src="./images/portf-project/web-9.jpg" alt="Fresh Coffee" />
+          <li class="projects-item">
+            <img src="./images/portf-project/web-9.jpg" alt="Fresh Coffee" width="360" />
             <h2 class="title-second">Fresh Coffee</h2>
-            <p>Web Site</p>
+            <p class="projects-text">Web Site</p>
             <!-- <p class="text-card">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
               totam.
