--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="<https://fonts.gstatic.com>" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -44,24 +44,35 @@
               <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
+        </address>
       </div>
-      </address>
     </header>
     <main>
       <section class="section projects container">
         <h1 class="title-invis">Our projects</h1>
         <ul class="list buttons-flex">
-          <li class="button-item"><button type="button" class="button">All</button></li>
-          <li class="button-item"><button type="button" class="button">Web Site</button></li>
-          <li class="button-item"><button type="button" class="button">App</button></li>
-          <li class="button-item"><button type="button" class="button">Design</button></li>
-          <li class="button-item"><button type="button" class="button">Marketing</button></li>
+          <li class="button-item">
+            <button type="button" class="button">All</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="button">Web Site</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="button">App</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="button">Design</button>
+          </li>
+          <li class="button-item">
+            <button type="button" class="button">Marketing</button>
+          </li>
         </ul>
         <ul class="list projects-flex">
           <li class="projects-item">
             <img
               src="./images/portf-project/app-1.jpg"
-              alt="Banking App Interface Concept" width="360"
+              alt="Banking App Interface Concept"
+              width="360"
             />
             <h2 class="title-second">Banking App Interface Concept</h2>
             <p class="projects-text">App</p>
@@ -73,7 +84,8 @@
           <li class="projects-item">
             <img
               src="./images/portf-project/mark-2.jpg"
-              alt="Cashless Payment" width="360"
+              alt="Cashless Payment"
+              width="360"
             />
             <h2 class="title-second">Cashless Payment</h2>
             <p class="projects-text">Marketing</p>
@@ -83,7 +95,11 @@
             </p> -->
           </li>
           <li class="projects-item">
-            <img src="./images/portf-project/app-3.jpg" alt="Meditaion App" width="360" />
+            <img
+              src="./images/portf-project/app-3.jpg"
+              alt="Meditaion App"
+              width="360"
+            />
             <h2 class="title-second">Meditaion App</h2>
             <p class="projects-text">App</p>
             <!-- <p class="text-card">
@@ -92,7 +108,11 @@
             </p> -->
           </li>
           <li class="projects-item">
-            <img src="./images/portf-project/mark-4.jpg" alt="Taxi Service" width="360" />
+            <img
+              src="./images/portf-project/mark-4.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
             <h2 class="title-second">Taxi Service</h2>
             <p class="projects-text">Marketing</p>
             <!-- <p class="text-card">
@@ -103,7 +123,8 @@
           <li class="projects-item">
             <img
               src="./images/portf-project/des-5.jpg"
-              alt="Screen Illustrations" width="360"
+              alt="Screen Illustrations"
+              width="360"
             />
             <h2 class="title-second">Screen Illustrations</h2>
             <p class="projects-text">Design</p>
@@ -113,7 +134,11 @@
             </p> -->
           </li>
           <li class="projects-item">
-            <img src="./images/portf-project/mark-6.jpg" alt="Online Courses" width="360" />
+            <img
+              src="./images/portf-project/mark-6.jpg"
+              alt="Online Courses"
+              width="360"
+            />
             <h2 class="title-second">Online Courses</h2>
             <p class="projects-text">Marketing</p>
             <!-- <p class="text-card">
@@ -124,7 +149,8 @@
           <li class="projects-item">
             <img
               src="./images/portf-project/des-7.jpg"
-              alt="Instagram Stories Concept" width="360"
+              alt="Instagram Stories Concept"
+              width="360"
             />
             <h2 class="title-second">Instagram Stories Concept</h2>
             <p class="projects-text">Design</p>
@@ -134,7 +160,11 @@
             </p> -->
           </li>
           <li class="projects-item">
-            <img src="./images/portf-project/web-8.jpg" alt="Organic Food" width="360" />
+            <img
+              src="./images/portf-project/web-8.jpg"
+              alt="Organic Food"
+              width="360"
+            />
             <h2 class="title-second">Organic Food</h2>
             <p class="projects-text">Web Site</p>
             <!-- <p class="text-card">
@@ -143,7 +173,11 @@
             </p> -->
           </li>
           <li class="projects-item">
-            <img src="./images/portf-project/web-9.jpg" alt="Fresh Coffee" width="360" />
+            <img
+              src="./images/portf-project/web-9.jpg"
+              alt="Fresh Coffee"
+              width="360"
+            />
             <h2 class="title-second">Fresh Coffee</h2>
             <p class="projects-text">Web Site</p>
             <!-- <p class="text-card">
@@ -168,5 +202,3 @@
     </footer>
   </body>
 </html>
-
-
